assets/css/cmps/AppHeader.css
.app-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0.5em 1em;
    background-color: #fff;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);

    >.material-symbols-outlined {
        margin-right: 1em;
    }

    >.logo img {
        height: 40px;
    }

    >.keep-logo {
        display: flex;
        align-items: center;
        font-weight: bold;
        font-size: 1.2em;

        >img {
            height: 32px;
            margin-left: 0.5em;
        }
    }

    >.header-bar {
        display: flex;
        flex: 1;
        justify-content: space-between;
        align-items: center;
        margin: 0 2em;

        >.search-bar {
            display: flex;
            align-items: center;
            background-color: #f1f3f4;
            padding: 0.4em 1em;
            border-radius: 24px;
            box-shadow: 0 1px 2px rgba(60, 64, 67, .08);
            flex: 1;
            max-width: 600px;
            gap: 0.5em;

            >.material-symbols-outlined {
                color: #5f6368;
                font-size: 24px;
                cursor: pointer;
            }

            >input {
                border: none;
                background: transparent;
                outline: none;
                flex: 1;
                font-size: 1em;
                color: #202124;
                padding: 0.5em 0;
            }

        }

        >.header-icons {
            display: flex;
            align-items: center;
            gap: 1em;

            >.avatar {
                height: 32px;
                width: 32px;
                border-radius: 50%;
            }

        }
    }
}

